# laze_lsp

./: Cargo.toml
parser_files/: cn.peg  en.peg  ge.peg  ja.peg  natcn.peg  naten.peg  natge.peg  natja.peg
src/: main.rs
src/lsp_parser/: combinator.rs  extracter.rs  lsp_combinator.rs  mod.rs  peg_matcher.rs  test_combinator.rs  test_peg_parser.rs  tokens.rs
src/lsp_parser/ast/: ast.rs  dec.rs  exp.rs  field.rs  ifelse.rs  mod.rs  op.rs  stm.rs  suffix.rs  ty.rs  var.rs
src/lsp_parser/laze_parser/: extracter.rs  init.rs  matcher.rs  mod.rs  parser.rs
src/lsp_parser/laze_parser/tests/: assign_statement.rs  if_statement.rs  mod.rs  while_statement.rs
src/lsp_parser/lsp_token/: lsp_combinator.rs  mod.rs  to_semantic.rs  tokenize.rs  tokens.rs
src/lsp_parser/peg_parser/: combinator.rs  extracter.rs  parser.rs  peg_matcher.rs  peg_rules.rs  test_combinator.rs  test_peg_parser.rs
src/lsp_parser/tests/: mod.rs  parser_parser.rs
src/server/: handler.rs  lsp_user.rs  mod.rs  settings.json
src/util/: file_opener.rs  mod.rs
