[package]
name = "laze_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
warp = "0.3"
tokio-stream = "0.1.10"
futures-util = "0.3.24"
serde_json = "1.0.85"
project-root = "0.2.2"